<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <!-- launch fragment -->
    <string name="btn_upcoming_elections">upcoming elections</string>
    <string name="btn_find_my_representatives">find my representatives</string>
    <string name="image_description_ballot_logo">A image of voting</string>

    <!-- elections fragment -->
    <string name="header_upcoming">Upcoming Elections</string>
    <string name="header_saved">Saved Elections</string>

    <!-- voter info fragment -->
    <string name="btn_follow">follow election</string>
    <string name="btn_unfollow">unfollow election</string>
    <string name="header_election_information">Election Information</string>
    <string name="text_voting_locations">Voting Locations</string>
    <string name="text_ballot_information">Ballot Information</string>

    <!-- representative fragment-->
    <string name="header_representative_search">Representative Search</string>
    <string name="edit_address_line_1">Address Line 1</string>
    <string name="edit_address_line_2">Address Line 2</string>
    <string name="edit_city">City</string>
    <string name="edit_zip">Zip</string>
    <string name="btn_find_my_representative">Find My Representative</string>
    <string name="btn_use_my_location">Use My Location</string>
    <string name="header_my_representatives">My Representatives</string>
    <string name="snackbar_error_require_location_permission">To get representatives by using location, you need to enable location permission</string>
    <string name="text_api_status_loading">Loading</string>
    <string name="text_api_status_error">Error when retrieving representatives</string>

</resources>
